--- a/wine-api/src/App.css
+++ b/wine-api/src/App.css
@@ -78,11 +78,12 @@ h1{
   border: 0;
   margin: 0;
 }
-table tr td{
+table tr td .row{
   padding: 10px;
   margin: 10px;
   border: 1px solid black;
-  width: 80%;
+  width: 100%;
+  height:100%;
 }
 .button{
   width:70px;
